--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "typescript": "~4.5.5",
     "vue-cli-plugin-vuetify": "~2.5.1",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
+  },
+  "resolutions": {
+    "axios": "^0.27.2"
   }
 }
